# SWP_Mobilkommunikation

./: .gitignore  README  README.rst  TODO
Bericht/: Einfuehrung.tex  Entwurf.tex  Evaluation.tex  Fazit.tex  Implementierung.tex  Softwareprojekt_Safest.tex  literature.bib  literature.bib.bak  swp_hintergrundentfernung_hmm.tex
Bericht/bilder/: 04_histogram_cluster.pdf.bak  05_AC_over_time.pdf.bak
Bericht/old_template/: Entwurf.tex  Evaluation.tex  Softwareprojekt_Safest.tex  literature.bib
Bericht/text/: 1-einleitung.tex  2-entwurf.tex  3-implementierung.tex  4-evaluation.tex  5-fazit.tex
DCT/: CMakeLists.txt  CvHMM.h  DCTexample.cpp  DCTexample_14jan.cpp  DCTexample_hmm.cpp  DCTexample_with_whity.cpp
DCT/eingang/: emit2D.yml  init2D.yml  trans2D.yml
DCT/innenhof/: emit2D.yml  init2D.yml  trans2D.yml
DCT/input/: emit2D.yml  init2D.yml  trans2D.yml
DCT/output/: emit2D.yml  init2D.yml  trans2D.yml
DCT/trash/: DC-AC.cpp  DCTexample.cpp  DCTexample_14jan.cpp
Histogramms/: histrogramm_tegel1.ods  ir640.csv
Histogramms/AC_offset_histograms/: DC0AC2AC3_eingang_block33-61.ods  ac2ac3_eingang_allblocks.csv  ac2ac3_eingang_allblocks.ods  ac2ac3_eingang_block33-61.ods  (+3 more)
Plots/: hmm1.dia
SPTrack/: CMakeLists.txt  DCTexample.cpp  Makefile  SPTrack  SPTrack.cpp  SPTrack.h  frame_container.cpp  sp_hmm.cpp  sp_hmm.h
SPTrack/CvHMM/: CvHMM.h
SPTrack/include/: SPTrack.h  config.h  container.h  frame_container.h  sp_dct.h  sp_hmm.h  sp_player.h
SPTrack/include/CvHMM/: CvHMM.h
SPTrack/modules/: CMakeLists.txt  sp_dct.cpp  sp_hmm.cpp  sp_player.cpp
(+84 files in other folders)
