CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DCTexample)
FIND_PACKAGE(OpenCV REQUIRED)
ADD_EXECUTABLE(DCTexample DCTexample.cpp)
TARGET_LINK_LIBRARIES(DCTexample ${OpenCV_LIBS})


set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -march=native")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -march=native")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -ggdb -Wall")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -ggdb -Wall")
