CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SPTrack)
FIND_PACKAGE(OpenCV REQUIRED)
ADD_SUBDIRECTORY(modules)
ADD_EXECUTABLE(SPTrack SPTrack.cpp)
INCLUDE_DIRECTORIES(${SPTrack_SOURCE_DIR}/include)
LINK_DIRECTORIES(${SPTrack_SOURCE_DIR}/modules)
TARGET_LINK_LIBRARIES(SPTrack ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(SPTrack sp_dct)
TARGET_LINK_LIBRARIES(SPTrack sp_player)
TARGET_LINK_LIBRARIES(SPTrack sp_hmm)

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -ggdb -Wall")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -ggdb -Wall")
